<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>georg_msgs</name>
  <version>0.0.0</version>
  <description>Message descriptions for the Autonohm Dahoam 'Georg' robot</description>
  <maintainer email="snaens@snaens.net">Sam 'snaens' Pelz</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/snaens/athome_msgs</url>
  <author email="snaens@snaens.net">Sam 'snaens' Pelz</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
